2009-11-06  Jakub Jelinek  <jakub@redhat.com>

	PR c++/41967
	* parser.c (cp_parser_omp_for_loop): After diagnosing not perfectly
	nested loop and parsing statements, don't cp_parser_require }, instead
	exit the loop if next token is CPP_EOF.

2009-11-04  Jason Merrill  <jason@redhat.com>

	PR c++/35067
	* method.c (use_thunk): Check DECL_WEAK as well as
	DECL_ONE_ONLY.

2009-11-03  Jason Merrill  <jason@redhat.com>

	PR c++/36959
	* decl2.c (cxx_callgraph_analyze_expr): Don't reference a function
	just because a static variable in it is needed unless -frepo.

2009-11-03  Jason Merrill  <jason@redhat.com>

	PR c++/41876
	* parser.c (cp_parser_exception_declaration): Pass true to
	is_condition parm of cp_parser_type_specifier_seq.
	(cp_parser_omp_for_loop): Likewise.

	PR c++/39786, Core issue 812, 861
	* name-lookup.c (qualified_lookup_using_namespace): Overhaul.

2009-11-02  Dodji Seketeli  <dodji@redhat.com>

	PR c++/37093
	* pt.c (check_valid_ptrmem_cst_expr): New function.
	(convert_nontype_argument): Use it to output an error for
	illegal pointer to member expressions used as template arguments.

2009-10-31  Jason Merrill  <jason@redhat.com>

	PR c++/41754
	* call.c (compare_ics): Avoid bad union use when
	comparing two ck_lists.

2009-10-23  Dodji Seketeli  <dodji@redhat.com>

	PR c++/40808
	* mangle.c (write_template_args): Allow mangling of empty template
	argument list. Updated function comments.

2009-10-21  Jakub Jelinek  <jakub@redhat.com>

	* mangle.c (finish_mangling_get_identifier): Use
	obstack_base (mangle_obstack) instead of name_base.

2009-10-15  Jason Merrill  <jason@redhat.com>

	PR c++/38798
	* parser.c (CP_PARSER_FLAGS_NO_TYPE_DEFINITIONS): New.
	(cp_parser_type_specifier): Don't try to parse a class-specifier
	or enum-specifier in that case.
	(cp_parser_trailing_type_id): New.
	(cp_parser_late_return_type_opt): Call it.
	(cp_parser_type_id_1): Add is_trailing_return parm.
	(cp_parser_type_specifier_seq): Likewise.
